@@ -18,7 +18,7 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 repositories {
-    mavenLocal() // TODO: use lib/ instead?
+    flatDir { dirs uri("${projectDir}/lib") }
     maven { url 'https://mvn.freenetproject.org' }
     jcenter()
 }
@@ -55,6 +55,17 @@ task buildInfo {
     }
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
+tasks.withType(Javadoc) {
+    options.encoding = "UTF-8"
+}
+
 task compileVersion (type: JavaCompile) {
     copy {
         from sourceSets.main.java.srcDirs
@@ -64,8 +75,8 @@ task compileVersion (type: JavaCompile) {
             String line -> line.replaceAll("@custom@","${gitrev}")
         }
     }
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
     source = "${version_buildir}"
     include "${version_src}"
     classpath = files(sourceSets.main.compileClasspath, sourceSets.main.output.classesDir)
@@ -78,16 +89,14 @@ processResources.dependsOn compileVersion
 task jar (type: Jar, overwrite: true) {
     from (compileVersion) {
         include 'freenet/node/Version**class'
-	preserveFileTimestamps = false
-        reproducibleFileOrder = true
     }
     from ("${buildDir}/classes/java/main/") {
         exclude 'freenet/node/Version.class'
         exclude 'freenet/node/Version$1.class'
-        preserveFileTimestamps = false
-        reproducibleFileOrder = true
     }
-    duplicatesStrategy = "exclude"
+    preserveFileTimestamps = false
+    reproducibleFileOrder = true
+    duplicatesStrategy = "warn"
     archivesBaseName = "freenet"
     manifest {
         attributes("Permissions": "all-permissions")
@@ -169,6 +178,11 @@ compileTestJava.dependsOn copyResourcesToClasses2
 compileTestJava.dependsOn copyTestResourcesToClasses2
 
 test {
+    if(JavaVersion.current() >= JavaVersion.VERSION_1_9) {
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+    }
     minHeapSize = "128m"
     maxHeapSize = "512m"
     // no inner class
@@ -219,13 +233,15 @@ copyRuntimeLibs.dependsOn jar
 // In this section you declare the dependencies for your production and test code
 dependencies {
     compile "org.bouncycastle:bcprov-jdk15on:1.59"
-    compile "net.java.dev.jna:jna:4.2.2"
-    compile "net.java.dev.jna:jna-platform:4.2.2"
+    compile "net.java.dev.jna:jna:4.5.2"
+    compile "net.java.dev.jna:jna-platform:4.5.2"
     compile "org.freenetproject:freenet-ext:29"
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
     testCompile "org.hamcrest:hamcrest-library:1.3"
+    testCompile "org.hamcrest:hamcrest-core:1.3"
+    testCompile "org.objenesis:objenesis:1.0"
 }
 
 dependencyVerification {
@@ -233,8 +249,8 @@ dependencyVerification {
     includedConfigurations = [configurations.testCompile]
     verify = [
         'org.bouncycastle:bcprov-jdk15on:1c31e44e331d25e46d293b3e8ee2d07028a67db011e74cb2443285aed1d59c85',
-        'net.java.dev.jna:jna-platform:32aca873a4cb14721d939bbc8287a828919c05e8e1040b3fe8290f6128cdecca',
-        'net.java.dev.jna:jna:1f38af54e06c6e6f6dbf39ba2c052b952dea5dddb4871127b34639ddeb11bdbe',
+        'net.java.dev.jna:jna-platform:f1d00c167d8921c6e23c626ef9f1c3ae0be473c95c68ffa012bc7ae55a87e2d6',
+        'net.java.dev.jna:jna:0c8eb7acf67261656d79005191debaba3b6bf5dd60a43735a245429381dbecff',
         'org.freenetproject:freenet-ext:32f2b3d6beedf54137ea2f9a3ebef67666d769f0966b08cd17fd7db59ba4d79f',
         'junit:junit:59721f0805e223d84b90677887d9ff567dc534d7c502ca903c0c2b17f05c116a',
         'org.mockito:mockito-core:f97483ba0944b9fa133aa29638764ddbeadb51ec3dbc02074c58fa2caecd07fa',
